--- a/.config/dwm/PKGBUILD
+++ b/.config/dwm/PKGBUILD
@@ -20,6 +20,7 @@ source=(
 	$pkgname-$pkgver-pertag.diff
 	$pkgname-$pkgver-attachabove.diff
 	$pkgname-$pkgver-pango.diff
+	$pkgname-5.8.2-fibonacci.diff
 	config.h
 	column_master.c
 	shiftview.c
@@ -38,6 +39,7 @@ build() {
 	#patch -p1 -i $srcdir/$pkgname-$pkgver-attachabove.diff
 	#patch -p1 -i $srcdir/$pkgname-$pkgver-pertag.diff
 	#patch -p1 -i $srcdir/$pkgname-$pkgver-pango.diff
+	#patch -p1 -i $srcdir/$pkgname-5.8.2-fibonacci.diff
 	sed -i 's/CPPFLAGS =/CPPFLAGS +=/g' config.mk
 	sed -i 's/^CFLAGS = -g/#CFLAGS += -g/g' config.mk
 	sed -i 's/^#CFLAGS = -std/CFLAGS += -std/g' config.mk
