--- a/.screenrc
+++ b/.screenrc
@@ -1,23 +1,16 @@
-hardstatus alwayslastline "%{= kc}[%c:%s] %{= kg}%-w%{=r}%n %t%{-}%+w"
+# screen configuration file
+# Written by ayekat on a cloudy summer day in 2010.
 
-# Explanation:
-# * First, we set the background color to black ("k") and the foreground color
-#   to cyan ("c"). This is achieved inside the "{}"-braces, after the "=".
-#   Next, the time is displayed with the variables %c (HH:MM) and %s (SS).
-# * To display the window list, we choose for example a yellow color on black
-#   background, therefore "%{= ky}".
-#   As we want to handle the current window specially, we only show the windows
-#   that come before ("%-w") and after ("%+w") the current window with the
-#   settings above.
-# * To display the current window, we switch the colors with "r" inside the
-#   "{}"-braces.
-#   With these settings we display the number ("%n") and the title ("%t") of the
-#   current window.
-# * Don't forget to display the rest of the window list with "%+w"; to set the
-#   color back to the former settings, just use "%{-}".
+# Draw statusline.
+hardstatus alwayslastline "%{= kc}[%0c:%s] %{= kK}%H%{-}%{=b kK}  >  %-w%{=b kg}%n %t%{-}%+w"
 
-# This is for my Debian server that does not seem to correctly handle character
-# encoding:
+# Fix misbehaving character encoding on Debian server:
 defc1 off
 defutf8 on
+
+# Don't display the copyright splash screen everytime:
+startup_message off
+
+# Correctly erase output after closing ncurses application:
+altscreen on
 
