Hint access keys for vimperator were insane. [FIXED]
* Using same access keys as in Vimium for Chrome.
  => Saves your hands.

--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -2,5 +2,6 @@
 " Written by ayekat on a rainy day in november 2012
 
 set editor=xterm\ -e\ vim
+set hintchars=hjklasdfgzuiopqwertnmyxcvb
 colorscheme indigo
 
