Added table for extended ANSI colour sequences in ansicolours.
* Corrected typo in .vimperatorrc; it correctly opens urxvt with vim now.
* Rewrote colour definitions in .vimrc with ANSI codes now.

--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -1,7 +1,7 @@
 " Vimperator resource file
 " Written by ayekat on a rainy day in november 2012
 
-set editor=xterm\ -e\ vim
+set editor=urxvt\ -e\ vim
 set hintchars=hjklasdfgzuiopqwertnmyxcvb
 colorscheme indigo
 
