Added possibility for sanely scrolling with the mouse inside tmux.
* Corrected a variable mistake in dwmloop.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,3 +28,6 @@ bind-key Space select-window -n
 # dev: keybindings for reloading config:
 bind-key r source-file ~/.tmux.conf #\; display-message "  Config reloaded..."
 
+# Sane scrolling:
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
