Added script that allows a more sane use of tmux.
* Allows using same tmux session with different views.
* Scratchpad gets started using that script now.
* Slight colour update for tmux statusline.
* Slight colour update for vim statusline.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,9 +13,9 @@ set-option -g status-justify left
 set -g status-bg black
 
 # Statusline content (let's get ugly!):
-set-window-option -g window-status-format ' #[fg=colour239]#I #[fg=colour252]#W '
-set-window-option -g window-status-current-format '#[bg=colour239,fg=white] #I #[fg=white]#W #[default]'
-set-window-option -g status-left '#[fg=colour28,bg=colour148] #I #[fg=colour148,bg=black]⮀ #[default]'
+set-window-option -g window-status-format ' #[fg=colour239]#I #W '
+set-window-option -g window-status-current-format '#[bg=colour236,fg=white] #I #[fg=white]#W #[default]'
+set-window-option -g status-left '#[fg=colour28,bg=colour148] #S #[fg=colour148,bg=black]⮀ #[default]'
 set-window-option -g status-right '#[fg=colour239]⮂#[fg=colour252,bg=colour239] #h ⮂#[bg=colour252,fg=black] %H:%M '
 
 
