--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,8 +15,8 @@ set -g status-bg black
 # Statusline content (let's get ugly!):
 set-window-option -g window-status-format ' #[fg=colour239]#I #W '
 set-window-option -g window-status-current-format '#[bg=colour236,fg=white] #I #[fg=white]#W #[default]'
-set-window-option -g status-left '#[fg=colour28,bg=colour148] #S #[fg=colour148,bg=black]⮀ #[default]'
-set-window-option -g status-right '#[fg=colour239]⮂#[fg=colour252,bg=colour239] #h ⮂#[bg=colour252,fg=black] %H:%M '
+set-window-option -g status-left '#[fg=colour28,bg=colour148] tmux #[fg=colour148,bg=black]⮀ #[default]'
+set-window-option -g status-right '#[fg=colour239]⮂#[fg=colour252,bg=colour239] #h ⮂#[bg=colour252,fg=colour239] %H:%M '
 
 
 # ------------------------------------------------------------------------------
