Minor colour update for vim, screen, tmux.

--- a/.screenrc
+++ b/.screenrc
@@ -23,6 +23,7 @@ hardstatus alwayslastline "%{= yK} screen %{= kK}  %-w%{+ kw}%n %t%{-}%+w%=%{= K
 # FEEL
 
 # Set escape character to Ctrl-b, as in tmux:
+# github: should look like "^Bb"
 escape "b"
 
 
