Tracked down that escape key delay.
* Was in tmux.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,3 +31,6 @@ bind-key r source-file ~/.tmux.conf #\; display-message "  Config reloaded..."
 # Sane scrolling:
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
+# Remove Escape key delay:
+set -sg escape-time 0
+
