Improved tmux keybinds for tab selection.
* Use ^L/^H to move to next/previous tab.
  => Without tmux escape sequence! ^^

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,15 +22,24 @@ set-window-option -g status-right '#[fg=colour8]â®‚#[fg=colour7,bg=colour8] #h â
 # ------------------------------------------------------------------------------
 # FEEL
 
-# Vim like movement:
-bind-key Space select-window -n
+# More natural tab selection:
+bind-key Space  select-window -n
+bind-key -n C-l select-window -n
+bind-key -n C-h select-window -p
 
 # dev: keybindings for reloading config:
-bind-key r source-file ~/.tmux.conf #\; display-message "  Config reloaded..."
+bind-key r source-file ~/.tmux.conf ; display-message "  Config reloaded..."
 
 # Sane scrolling:
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # Remove Escape key delay:
 set -sg escape-time 0
+
+
+# ------------------------------------------------------------------------------
+# BEHAVIOUR
+
+# Open new tabs in $HOME instead of currend pwd:
+set default-path $HOME
 
