--- a/.config/dwm/PKGBUILD
+++ b/.config/dwm/PKGBUILD
@@ -39,6 +39,7 @@ build() {
 	sed -i 's/^#CFLAGS = -std/CFLAGS += -std/g' config.mk
 	sed -i 's/^LDFLAGS = -g/#LDFLAGS += -g/g' config.mk
 	sed -i 's/^#LDFLAGS = -s/LDFLAGS += -s/g' config.mk
+	echo "CFLAGS += -DHOST_$HOSTNAME" >> config.mk
 	make X11INC=/usr/include/X11 X11LIB=/usr/lib/X11
 }
 
