--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,14 +9,15 @@
 set -g default-terminal "screen-256color"
 
 # Statusline options:
+set-option -g status-left-length 60
 set-option -g status-justify left
 set -g status-bg black
 
 # Statusline content (let's get ugly!):
-set-window-option -g window-status-format ' #[fg=colour239]#I #W '
-set-window-option -g window-status-current-format '#[bg=colour236,fg=white] #I #[fg=white]#W #[default]'
-set-window-option -g status-left '#[fg=colour22,bg=colour148] tmux #[fg=colour148,bg=black]⮀ #[default]'
-set-window-option -g status-right '#[fg=colour8]⮂#[fg=colour7,bg=colour8] #h ⮂#[bg=colour7,fg=colour8] %H:%M '
+set-window-option -g status-left '#[fg=colour22,bg=colour148] tmux #[fg=colour148,bg=colour240]⮀ #[fg=colour7]#h #[fg=colour240,bg=black]⮀#[default] '
+set-window-option -g status-right '#[fg=colour8]⮂#[fg=colour7,bg=colour8] ... ⮂#[bg=colour7,fg=colour8] %H:%M '
+set-window-option -g window-status-format ' #[fg=colour244]#I #W '
+set-window-option -g window-status-current-format '#[fg=colour15,bg=colour233] #[bright,fg=colour148]#I#[default,fg=colour15,bg=colour233] #W #[default]'
 
 
 # ------------------------------------------------------------------------------
@@ -28,7 +29,7 @@ bind-key -n C-l select-window -n
 bind-key -n C-h select-window -p
 
 # dev: keybindings for reloading config:
-bind-key r source-file ~/.tmux.conf ; display-message "  Config reloaded..."
+bind-key r source-file ~/.tmux.conf #; display-message "Config reloaded..."
 
 # Sane scrolling:
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
