--- a/.config/dwm/PKGBUILD
+++ b/.config/dwm/PKGBUILD
@@ -20,6 +20,7 @@ source=(
 	$pkgname-$pkgver-pertag.diff
 	$pkgname-$pkgver-attachabove.diff
 	$pkgname-$pkgver-pango.diff
+	$pkgname-$pkgver-scratchpad.diff
 	$pkgname-5.8.2-fibonacci.diff
 	config.h
 )
@@ -33,13 +34,14 @@ build() {
 	#patch -p1 -i $srcdir/$pkgname-$pkgver-attachabove.diff
 	#patch -p1 -i $srcdir/$pkgname-$pkgver-pertag.diff
 	#patch -p1 -i $srcdir/$pkgname-$pkgver-pango.diff
+	#patch -p1 -i $srcdir/$pkgname-$pkgver-scratchpad.diff
 	#patch -p1 -i $srcdir/$pkgname-5.8.2-fibonacci.diff
+	#echo "CFLAGS += -DHOST_$HOSTNAME" >> config.mk
 	sed -i 's/CPPFLAGS =/CPPFLAGS +=/g' config.mk
 	sed -i 's/^CFLAGS = -g/#CFLAGS += -g/g' config.mk
 	sed -i 's/^#CFLAGS = -std/CFLAGS += -std/g' config.mk
 	sed -i 's/^LDFLAGS = -g/#LDFLAGS += -g/g' config.mk
 	sed -i 's/^#LDFLAGS = -s/LDFLAGS += -s/g' config.mk
-	echo "CFLAGS += -DHOST_$HOSTNAME" >> config.mk
 	make X11INC=/usr/include/X11 X11LIB=/usr/lib/X11
 }
 
