Added a sane key definitions for switching between tmux panes.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,6 +28,10 @@ bind-key Space  select-window -n
 bind-key -n C-l select-window -n
 bind-key -n C-h select-window -p
 
+# More vim-like window selection:
+bind-key j select-pane -t :.+
+bind-key k select-pane -t :.-
+
 # dev: keybindings for reloading config:
 bind-key r source-file ~/.tmux.conf #; display-message "Config reloaded..."
 
