Customised window pane border colour.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,10 @@ set-window-option -g status-right '#[fg=colour8]⮂#[fg=colour7,bg=colour8] ... 
 set-window-option -g window-status-format ' #[fg=colour244]#I #W '
 set-window-option -g window-status-current-format '#[fg=colour15,bg=colour233] #[bright,fg=colour148]#I#[default,fg=colour15,bg=colour233] #W #[default]'
 
+# Pane separators:
+set -g pane-border-fg colour238
+set -g pane-active-border-fg yellow
+
 
 # ------------------------------------------------------------------------------
 # FEEL
