dwmloop had a '&' inserted (how the hell...)
* Caused dwm to constantly restarting itself; wasn't really fun.
* Added alias for sane use of info.
* Added alias for handy use of ayemake.
  => ayemake now also forwards arguments (such as 'all', 'clean', etc.)
* .xinitrc hashbang has been re-changed to /bin/sh
  => backwards compatibility for the non-/usr folks

--- a/.shrc
+++ b/.shrc
@@ -37,10 +37,12 @@ fi
 
 alias cp='cp -i'
 alias grep='grep --color=auto'
+alias info='info --vi-keys'
 alias la='ls -a'
 alias lah='ls -lah'
 alias laht='ls -laht'
 alias ll='ls -lh'
+alias mk='ayemake'
 alias mv='mv -i'
 alias sudo='sudo -p "[sudo]"\ password:\ '
 # BSD vs GNU:
