Added single_tagset patch, but it makes dwm crash.
* Disabled, for the moment, will tinker around when I've got time.

--- a/.config/dwm/PKGBUILD
+++ b/.config/dwm/PKGBUILD
@@ -18,13 +18,16 @@ sources=(
 	config.h
 )
 patches=(
-	$pkgname-$pkgver-bstack.diff
-	$pkgname-$pkgver-push.diff
-	$pkgname-$pkgver-pertag.diff
-	$pkgname-$pkgver-attachabove.diff
-	$pkgname-$pkgver-pango.diff
-	$pkgname-$pkgver-scratchpad.diff
-	$pkgname-5.8.2-fibonacci.diff
+	01-dwm-6.0-bstack.diff
+	02-dwm-6.0-push.diff
+	03-dwm-6.0-pertag.diff
+	04-dwm-6.0-attachabove.diff
+	05-dwm-6.0-pango.diff
+	06-dwm-6.0-scratchpad.diff
+	07-dwm-5.8.2-fibonacci.diff
+)
+patches_disabled=(
+	08-dwm-6.0-trivial_single_tagset.diff
 )
 source=(${sources[@]} ${patches[@]})
 
