Display session name in tmux menubar.
Used to display simply 'tmux', now it can be used e.g. to mark the
scratchpad window.

Further minor changes:
* /usr/bin/bash -> /bin/bash in .bashrc
* corrected default web browser for roxterm

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,7 +14,7 @@ set-option -g status-justify left
 set -g status-bg black
 
 # Statusline content (let's get ugly!):
-set-window-option -g status-left '#[fg=colour22,bg=colour148] tmux #[fg=colour148,bg=colour240]⮀ #[fg=colour7]#h #[fg=colour240,bg=black]⮀#[default] '
+set-window-option -g status-left '#[fg=colour22,bg=colour148] #S #[fg=colour148,bg=colour240]⮀ #[fg=colour7]#h #[fg=colour240,bg=black]⮀#[default] '
 set-window-option -g status-right '#[fg=colour8]⮂#[fg=colour7,bg=colour8] ... ⮂#[bg=colour7,fg=colour8] %H:%M '
 set-window-option -g window-status-format ' #[fg=colour244]#I #W '
 set-window-option -g window-status-current-format '#[fg=colour15,bg=colour233] #[bright,fg=colour148]#I#[default,fg=colour15,bg=colour233] #W #[default]'
