--- a/.config/dwm/PKGBUILD
+++ b/.config/dwm/PKGBUILD
@@ -18,7 +18,6 @@ sources=(
 	config.h
 )
 patches=(
-	00-dwm-6.0-uselessgap.diff
 	01-dwm-6.0-bstack.diff
 	02-dwm-6.0-push.diff
 	03-dwm-6.0-pertag.diff
@@ -26,10 +25,10 @@ patches=(
 	05-dwm-6.0-pango.diff
 	06-dwm-6.0-scratchpad.diff
 	07-dwm-5.8.2-fibonacci.diff
-	09-dwm-5.9-uselessgap.diff
 )
 patches_disabled=(
 	08-dwm-6.0-trivial_single_tagset.diff
+	09-dwm-6.0-smfact.diff
 )
 source=(${sources[@]} ${patches[@]})
 
