Add script for toggling custom CSS for dwb.
It actually just renames the stylesheet file, so dwb will/won't
recognise it as stylesheet.

Change overall system colour to vim:statusbar(normal) colour.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,7 +21,7 @@ set-window-option -g window-status-current-format '#[fg=colour15,bg=colour233] #
 
 # Pane separators:
 set -g pane-border-fg colour238
-set -g pane-active-border-fg yellow
+set -g pane-active-border-fg colour148
 
 
 # ------------------------------------------------------------------------------
