Add patch to highlight layout symbol in dwm statusbar.

--- a/.config/dwm/PKGBUILD
+++ b/.config/dwm/PKGBUILD
@@ -25,6 +25,7 @@ patches=(
 	05-dwm-6.0-pango.diff
 	06-dwm-6.0-scratchpad.diff
 	07-dwm-5.8.2-fibonacci.diff
+	10-dwm-6.0-taags.diff
 )
 patches_disabled=(
 	08-dwm-6.0-trivial_single_tagset.diff
