Update .gitignore (see last commit); update 'fuck alias'.
'fuck' now changes to a specified SwEng homework directory by default.

--- a/.shrc
+++ b/.shrc
@@ -91,9 +91,8 @@ fi
 fuck() {
 	case $1 in
 		1) target=SwEngTutorial;;
-		2) target=SwEng2013QuizApp;;
 		3) target=SwEng2013QuizAppTest;;
-		*) target='';
+		2|*) target=SwEng2013QuizApp;;
 	esac
 	cd ~/dev/sweng/"$target"
 }
