--- a/.shrc
+++ b/.shrc
@@ -89,12 +89,16 @@ fi
 
 # EPFL fuckery: SwEng project
 fuck() {
-	case $1 in
+	case "$1" in
+		x|xt) base=~/dev/swengtest;;
+		*) base=~/dev/sweng;;
+	esac
+	case "$1" in
 		1) target=SwEngTutorial;;
-		3) target=SwEng2013QuizAppTest;;
+		3|xt) target=SwEng2013QuizAppTest;;
 		2|*) target=SwEng2013QuizApp;;
 	esac
-	cd ~/dev/sweng/"$target"
+	cd "$base"/"$target"
 }
 
 
