--- a/.config/dwm/PKGBUILD
+++ b/.config/dwm/PKGBUILD
@@ -26,6 +26,7 @@ patches=(
 	06-dwm-6.0-scratchpad.diff
 	07-dwm-5.8.2-fibonacci.diff
 	10-dwm-6.0-taags.diff
+	11-dwm-6.0-startup.diff
 )
 patches_disabled=(
 	08-dwm-6.0-trivial_single_tagset.diff
