Colour scheme update: more dim.
Syntax highlighting colours in vim are now dimmer, and colour
definitions in general were moved away from the 'look' section of
.vimrc.

The general foreground and background colour contrast is lowered (thus
and update in all terminal preferences).

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,13 +11,13 @@ set -g default-terminal "screen-256color"
 # Statusline options:
 set-option -g status-left-length 60
 set-option -g status-justify left
-set -g status-bg black
+set -g status-bg colour236
 
 # Statusline content (let's get ugly!):
-set-window-option -g status-left '#[fg=colour22,bg=colour148] tmux #[fg=colour148,bg=colour240] #[fg=colour7]#h #[fg=colour240,bg=black]#[default] '
+set-window-option -g status-left '#[fg=colour22,bg=colour148] tmux #[fg=colour148,bg=colour240] #[fg=colour7]#h #[fg=colour240,bg=colour236]#[default] '
 set-window-option -g status-right '#[fg=colour8]#[fg=colour7,bg=colour8] ... #[bg=colour7,fg=colour8] %H:%M '
-set-window-option -g window-status-format ' #[fg=colour244]#I #W '
-set-window-option -g window-status-current-format '#[fg=colour15,bg=colour233] #[bright,fg=colour148]#I#[default,fg=colour15,bg=colour233] #W #[default]'
+set-window-option -g window-status-format ' #[fg=colour244,bg=colour236]#I #W '
+set-window-option -g window-status-current-format '#[fg=colour15,bg=colour232] #[bright,fg=colour148]#I#[default,fg=colour15,bg=colour233] #W #[default]'
 
 # Pane separators:
 set -g pane-border-fg colour238
