--- a/.shrc
+++ b/.shrc
@@ -8,8 +8,8 @@
 
 # Read operating system information (if available):
 if [ -e /etc/os-release ]; then
-	arch=$(grep ID /etc/os-release | cut -c 4-)
-elif [ $(uname) = 'Darwin' ]; then
+	arch="$(grep -e '^ID' /etc/os-release | cut -c 4-)"
+elif [ "$(uname)" = 'Darwin' ]; then
 	arch='darwin'
 elif [ -e /etc/gentoo-release ]; then
 	arch='gentoo'
@@ -18,17 +18,11 @@ else
 fi
 
 # Determine if desktop (Xorg exists or OS X):
-[ -e /usr/bin/xinit -o $arch = 'darwin' ] && IS_DESKTOP=1
+[ -e /usr/bin/xinit -o "$arch" = 'darwin' ] && IS_DESKTOP=1
 
 # If not, we are on a server, so start or reattach to tmux session if SSH:
 if [ ! $IS_DESKTOP ] && [ ! -z "$SSH_TTY" ]; then
-	# Hosteurope fuckery: tmux does not run correctly, so fallback to screen:
-	if [ $HOSTNAME = 'rowland' ]; then
-		[ -e /usr/bin/screen ] && [ $TERM != 'screen-bce' ] && \
-				TERM=xterm-256color screen -U -x && exit
-	else
-		[ -e /usr/bin/tmux ] && [ $TERM != 'screen-256color' ] && tmx 0 && exit
-	fi
+	[ -e /usr/bin/tmux ] && [ "$TERM" != 'screen-256color' ] && tmx 0 && exit
 fi
 
 # }}}
@@ -46,11 +40,11 @@ alias mk='ayemake'
 alias mv='mv -i'
 alias sudo='sudo -p "[sudo]"\ password:\ '
 # BSD vs GNU:
-[ $arch = 'darwin' ] && alias ls='ls -G' || alias ls='ls --color=auto'
+[ "$arch" = 'darwin' ] && alias ls='ls -G' || alias ls='ls --color=auto'
 
 # Coloured man pages:
 man() {
-	if [ $TERM = 'linux' ]; then
+	if [ "$TERM" = 'linux' ]; then
 		env \
 			LESS_TERMCAP_mb=$(printf "\e[34m") \
 			LESS_TERMCAP_md=$(printf "\e[1;31m") \
@@ -81,26 +75,11 @@ man() {
 [ -e /usr/bin/valgrind ] && alias valgrind='valgrind --log-file=valgrind.log'
 
 # Arch specific aliases:
-if [ $arch = 'arch' ]; then
+if [ "$arch" = 'arch' ]; then
 	alias cal='cal -m -3'
-	[ $IS_DESKTOP ] && [ $TERM = 'linux' ] &&
+	[ $IS_DESKTOP ] && [ "$TERM" = 'linux' ] &&
 			alias x='startx -- -nolisten tcp & disown && exit'
 fi
-
-# EPFL fuckery: SwEng project
-fuck() {
-	case "$1" in
-		x|xt) base=~/dev/swengtest;;
-		*)    base=~/dev/sweng;;
-	esac
-	case "$1" in
-		1)    target=SwEngTutorial;;
-		t|xt) target=SwEng2013QuizAppTest;;
-		*)    target=SwEng2013QuizApp;;
-	esac
-	cd "$base"/"$target"
-}
-
 
 # }}}
 # ------------------------------------------------------------------------------
@@ -108,7 +87,7 @@ fuck() {
 
 # Define logos:
 printlogo() {
-	case $1 in
+	case "$1" in
 		debian)
 			printf "\e[31m                             \n"
 			printf       "          .xd§PVkbxc.        \n"
@@ -168,14 +147,11 @@ printlogo() {
 	esac
 }
 
-# Delete the 'Desktop' folder if on an Arch installation:
-[ $arch = 'arch' ] && rmdir $HOME/Desktop 2> /dev/null
-
 # Print system logo:
-printlogo $arch
+printlogo "$arch"
 
 # Display the todo file in the home directory:
-[ -e $HOME/TODO ] && { echo; cat $HOME/TODO; echo; }
+[ -e "$HOME"/TODO ] && { echo; cat "$HOME"/TODO; echo; }
 
 # }}}
 
