Minor fixes for xor and .shrc; fix error in tmux.conf.
New tmux apparently doesn't like the 'default-path' option anymore, so I
remove it.

--- a/.shrc
+++ b/.shrc
@@ -104,15 +104,15 @@ printlogo() {
 			;;
 		arch)
 			printf "\e[34m                             \n"
-			printf       "              /\             \n"
-			printf       "             /AA\            \n"
-			printf       "            .'YAA\           \n"
-			printf       "           /AAAAAA\          \e[0m `uname -s -r`\n"
-			printf "\e[34m          /AAAAAAAA\         \e[0m on `uname -n`\n"
-			printf "\e[34m         /AAA/  \AAA\        \n"
-			printf       "        /AAA|    |AAP\       \n"
-			printf       "       /AAAY\    /YAAa_      \n"
-			printf       "      />*'          '*<\     \n"
+			printf       "              /\\             \n"
+			printf       "             /AA\\            \n"
+			printf       "            .'YAA\\           \n"
+			printf       "           /AAAAAA\\          \e[0m `uname -s -r`\n"
+			printf "\e[34m          /AAAAAAAA\\         \e[0m on `uname -n`\n"
+			printf "\e[34m         /AAA/  \\AAA\\        \n"
+			printf       "        /AAA|    |AAP\\       \n"
+			printf       "       /AAAY\\    /YAAa_      \n"
+			printf       "      />*'          '*<\\     \n"
 			printf       "     ^                  ^    \n"
 			printf  "\e[0m                             \n"
 			;;
@@ -125,8 +125,8 @@ printlogo() {
 			printf "\e[31m      :AAAAAAAAAAAAA         \e[0m on `uname -n`\n"
 			printf "\e[31m      'AAAAAAAAAAAAA.        \n"
 			printf "\e[35m       YAAAAAAAAAAAAAx.      \n"
-			printf "\e[34m        \AAAAAAAAAAAAP       \n"
-			printf "\e[36m         '<AV*''*\AP'        \n"
+			printf "\e[34m        \\AAAAAAAAAAAAP       \n"
+			printf "\e[36m         '<AV*''*\\AP'        \n"
 			printf       "                             \n"
 			printf "\e[0m                              \n"
 			;;
