--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,5 +50,5 @@ set -sg escape-time 0
 # BEHAVIOUR
 
 # Open new tabs in $HOME instead of currend pwd:
-set default-path $HOME
+#set default-path $HOME
 
