--- a/.shrc
+++ b/.shrc
@@ -83,6 +83,13 @@ fi
 
 # }}}
 # ------------------------------------------------------------------------------
+# SHORTCUTS {{{
+
+# if the folder does not exist, cd will try in $CDPATH before failing:
+CDPATH=".:~/epfl"
+
+# }}}
+# ------------------------------------------------------------------------------
 # START-UP ACTIONS {{{
 
 # Define logos:
