Fix Alt/Super key swap; put dunst window back to corner.
Add a few lines to .vimrc to simplify things for the CG course.

--- a/.shrc
+++ b/.shrc
@@ -67,6 +67,10 @@ man() {
 	fi
 }
 
+mutt() {
+	TERM=xterm-256color $(which mutt)
+}
+
 # Server only aliases (mostly additional security):
 [ ! $IS_DESKTOP ] && alias rm='rm -i'
 
