--- a/.shrc
+++ b/.shrc
@@ -8,7 +8,7 @@
 
 # Read operating system information (if available):
 if [ -e /etc/os-release ]; then
-	arch="$(grep -e '^ID' /etc/os-release | cut -c 4-)"
+	arch="$(grep -e '^ID=' /etc/os-release | cut -c 4-)"
 elif [ "$(uname)" = 'Darwin' ]; then
 	arch='darwin'
 elif [ -e /etc/gentoo-release ]; then
