--- a/.shrc
+++ b/.shrc
@@ -90,7 +90,10 @@ fi
 # SHORTCUTS {{{
 
 # if the folder does not exist, cd will try in $CDPATH before failing:
-CDPATH=".:~/epfl"
+case "$HOSTNAME" in
+	ixh) CDPATH=".:~/epfl:~/dev" ;;
+	penrose) CDPATH=".:/var/www/db/project" ;;
+esac
 
 # }}}
 # ------------------------------------------------------------------------------
@@ -165,4 +168,3 @@ printlogo "$arch"
 [ -e "$HOME"/TODO ] && { echo; cat "$HOME"/TODO; echo; }
 
 # }}}
-
