--- a/.shrc
+++ b/.shrc
@@ -92,7 +92,7 @@ fi
 # if the folder does not exist, cd will try in $CDPATH before failing:
 case "$HOSTNAME" in
 	ixh) CDPATH=".:~/epfl:~/dev" ;;
-	penrose) CDPATH=".:/var/www/db/project" ;;
+	penrose) CDPATH=".:~/db/project" ;;
 esac
 
 # }}}
