End patched font nonsense; start using urxvt
~/.local/share/fonts directory has always caused trouble, and the way X
handled fonts was in no way transparent (although, it still isn't, but
at least I'm reducing some troublesome factors here).

Anyway, some of the special characters in both the vim and tmux
configuration have been replaced by already existing characters, others
have been removed (the triangle separators, for example).

urxvt is now configured properly: it can handle URLs well, and the
open-in-same-directory plugin works flawlessly with Ctrl+Shift+N (almost
as if it was xfce4-terminal). The only thing that's still bothering me
is to get the Clipboard working, but I know people who can live without
it, maybe I may convert to one of them one day.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,13 +11,14 @@ set -g default-terminal "screen-256color"
 # Statusline options:
 set-option -g status-left-length 60
 set-option -g status-justify left
+set -g status-fg colour244
 set -g status-bg colour236
 
 # Statusline content (let's get ugly!):
-set-window-option -g status-left '#[fg=colour22,bg=colour148] tmux #[fg=colour148,bg=colour240] #[fg=colour7]#h #[fg=colour240,bg=colour236]#[default] '
-set-window-option -g status-right '#[fg=colour8]#[fg=colour7,bg=colour8] ... #[bg=colour7,fg=colour8] %H:%M '
-set-window-option -g window-status-format ' #[fg=colour244,bg=colour236]#I #W '
-set-window-option -g window-status-current-format '#[fg=colour15,bg=colour232] #[bright,fg=colour148]#I#[default,fg=colour15,bg=colour233] #W #[default]'
+set-window-option -g status-left '#[fg=colour22,bg=colour148] #h #[fg=colour7,bg=colour240] tmux #[default]'
+set-window-option -g status-right '#[fg=colour7,bg=colour8] ... #[fg=colour8,bg=colour7] %H:%M '
+set-window-option -g window-status-format ' #I #W '
+set-window-option -g window-status-current-format '#[bright,fg=colour148,bg=colour232] #I#[default,fg=colour15,bg=colour232] #W #[default]'
 
 # Pane separators:
 set -g pane-border-fg colour238
@@ -37,7 +38,7 @@ bind-key j select-pane -t :.+
 bind-key k select-pane -t :.-
 
 # dev: keybindings for reloading config:
-bind-key r source-file ~/.tmux.conf #; display-message "Config reloaded..."
+bind-key r source-file ~/.tmux.conf; display-message "Config reloaded..."
 
 # Sane scrolling:
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
