--- a/.shrc
+++ b/.shrc
@@ -90,10 +90,10 @@ mutt() {
 # SHORTCUTS {{{
 
 # if the folder does not exist, cd will try in $CDPATH before failing:
-#case "$HOSTNAME" in
-#	ixh) CDPATH=".:~/epfl:~/dev" ;;
+case "$HOSTNAME" in
+	ixh) CDPATH=".:/nas/himbeeri/public" ;;
 #	penrose) CDPATH=".:~/db/project" ;;
-#esac
+esac
 
 # }}}
 # ------------------------------------------------------------------------------
