Remove NAS mount from CDPATH; re-add loading X resources in .xinitrc
Having mounted an NFS filesystem that may block is fine; but as soon as
we have to query that mount everytime we complete in the shell, it
becomes a major pain in the ass.

--- a/.shrc
+++ b/.shrc
@@ -78,10 +78,10 @@ man() {
 # SHORTCUTS {{{
 
 # if the folder does not exist, cd will try in $CDPATH before failing:
-case "$HOSTNAME" in
-	ixh) CDPATH=".:/nas/himbeeri/public" ;;
+#case "$HOSTNAME" in
+#	ixh) CDPATH=".:/nas/himbeeri/public" ;;
 #	penrose) CDPATH=".:~/db/project" ;;
-esac
+#esac
 
 # }}}
 # ------------------------------------------------------------------------------
