Add ncmpcpp config to ~/.config; add alias to make it work
ncmpcpp is one of those bloody programmes who litter up the home
directory, instead of putting their configs where they belong. Luckily,
one may specify a configuration directory in the config, and apply that
config by launching ncmpcpp with the -c option.
... literally screams for an alias.

Also, add a few .gitignores, including the "global" one for the home
directory.

Also, add user-dirs.dirs which specifies which folder is treated how.
Should prevent Firefox from creating the Desktop folder in the future.

--- a/.shrc
+++ b/.shrc
@@ -71,7 +71,8 @@ man() {
 [ ! $IS_DESKTOP ] && alias rm='rm -i'
 
 # Application specific aliases:
-[ -e /usr/bin/valgrind ] && alias valgrind='valgrind --log-file=valgrind.log'
+which valgrind >/dev/null 2>&1 && alias valgrind='valgrind --log-file=valgrind.log'
+which ncmpcpp >/dev/null 2>&1 && alias ncmpcpp='ncmpcpp -c ~/.config/ncmpcpp/config'
 
 # }}}
 # ------------------------------------------------------------------------------
