--- a/.shrc
+++ b/.shrc
@@ -169,10 +169,10 @@ cmd_exists uim-fep irssi && alias irssi='uim-fep -e irssi'
 # SHORTCUTS {{{
 
 # if the folder does not exist, cd will try in $CDPATH before failing:
-#case "$(hostname)" in
-#	ixh) CDPATH=".:/nas/himbeeri/public" ;;
+case "$(hostname)" in
+	ixh) CDPATH=".:$HOME/epfl" ;;
 #	penrose) CDPATH=".:~/db/project" ;;
-#esac
+esac
 
 # }}}
 #-------------------------------------------------------------------------------
