Move vim configuration to ~/.config
This is a big day. Although aliasing vim feels really nasty, it shows
that cleaning up the home directory is indeed possible. If this goes on
like this, we may soon run 'git init' directly in the home directory
without having to symlink stuff around.

... it's gonna be a long journey though.

--- a/.config/git/config
+++ b/.config/git/config
@@ -6,7 +6,7 @@
 	diff = auto
 	branch = auto
 [core]
-	editor = vim
+	editor = vim -i .cache/viminfo -u .config/vim/vimrc
 	excludesfile = .config/git/ignore
 [push]
 	default = simple
