--- a/.shrc
+++ b/.shrc
@@ -149,9 +149,7 @@ alias la='ls -A'
 alias lah='ls -lAh'
 alias laht='ls -lAht'
 alias ll='ls -lh'
-alias mk='ayemake'
 alias mv='mv -i'
-alias sudo='sudo -p "[sudo]"\ password:\ '
 # BSD vs GNU:
 [ "$arch" = 'darwin' ] && alias ls='ls -G' || alias ls='ls --color=auto'
 
@@ -160,6 +158,8 @@ cmd_exists valgrind && alias valgrind='valgrind --log-file=valgrind.log'
 cmd_exists ncmpcpp && alias ncmpcpp='ncmpcpp -c ~/.config/ncmpcpp/config'
 cmd_exists uim-fep mutt && alias mutt='uim-fep -e mutt'
 cmd_exists uim-fep irssi && alias irssi='uim-fep -e irssi'
+cmd_exists sudo && alias sudo='sudo -p "[sudo]"\ password:\ '
+cmd_exists vim && alias vim='vim -i ~/.cache/viminfo -u ~/.config/vim/vimrc'
 
 # Server only aliases (mostly additional security):
 [ ! $IS_DESKTOP ] && alias rm='rm -i'
