[vls] Attempt to fix the return value/service
Doesn't work, though, giving up.

--- a/.local/src/vls/vls/vls.service
+++ b/.local/src/vls/vls/vls.service
@@ -4,7 +4,7 @@ Requires=vde.service
 After=vde.service
 
 [Service]
-Type=oneshot
+Type=simple
 ExecStart=@INSTALLDIR@/bin/vls
 ExecStop=/bin/kill -INT $MAINPID
 
