Add systemd service file to scrock
This might be the next candidate for being split from the dotfiles
repository. Add signal handling, and we're good to go solo ^^

--- a/.local/src/scrock/Makefile
+++ b/.local/src/scrock/Makefile
@@ -1,10 +1,25 @@
-NAME=scrock
-INSTALLDIR=/usr
+INSTALLDIR=/usr/local
 
 all:
+	mkdir -p build
+	sed -e "s/@INSTALLDIR@/$(shell echo "${INSTALLDIR}" | sed 's/\//\\\//g')/g"\
+		scrock.service > build/scrock.service
+	cp scrock build/scrock
 
 install:
-	install ${NAME} ${INSTALLDIR}/bin/${NAME}
+	install --mode=0755 scrock ${INSTALLDIR}/bin/scrock
+	install --mode=0644 scrock.service /usr/lib/systemd/system/scrock.service
+	systemctl daemon-reload
 
 uninstall:
-	rm ${INSTALLDIR}/bin/${NAME}
+	rm -f ${INSTALLDIR}/bin/scrock
+	rm -f /usr/lib/systemd/system/scrock.service
+	systemctl daemon-reload
+
+clean:
+	rm -rf build
+
+.PHONY: all
+.PHONY: install
+.PHONY: uninstall
+.PHONY: clean
