[scrock] Fix install target to install right files
It didn't install the files from the build directory, so the installed
systemd service file was actually pointing to an invalid path (with
@INSTALLDIR@ all over the place).

--- a/.local/src/scrock/Makefile
+++ b/.local/src/scrock/Makefile
@@ -7,8 +7,8 @@ all:
 	cp scrock build/scrock
 
 install:
-	install --mode=0755 scrock ${INSTALLDIR}/bin/scrock
-	install --mode=0644 scrock.service /usr/lib/systemd/system/scrock.service
+	install --mode=0755 build/scrock ${INSTALLDIR}/bin/scrock
+	install --mode=0644 build/scrock.service /usr/lib/systemd/system/scrock.service
 	systemctl daemon-reload
 
 uninstall:
