[scrock] Create service symlink in sleep.target.wants
It doesn't quite solve the problem of scrock not triggering upon the
sleep target going off, but I still like to think that I'm getting one
step closer to the solution.

--- a/.local/src/scrock/Makefile
+++ b/.local/src/scrock/Makefile
@@ -9,6 +9,8 @@ all:
 install:
 	install --mode=0755 build/scrock ${INSTALLDIR}/bin/scrock
 	install --mode=0644 build/scrock.service /usr/lib/systemd/system/scrock.service
+	mkdir -p /usr/lib/systemd/system/sleep.target.wants
+	{ cd /usr/lib/systemd/system/sleep.target.wants/; ln -s ../scrock.service; }
 	systemctl daemon-reload
 
 uninstall:
