--- a/.config/sh/config
+++ b/.config/sh/config
@@ -58,5 +58,44 @@ fi
 
 # }}}
 # ------------------------------------------------------------------------------
+# PROMPT {{{
+
+# Prompt colours:
+pc_vcs_kernel=$(printf "\033[30m")
+pc_vcs_clean=$(printf "\033[32m")
+pc_vcs_ahead=$(printf "\033[36m")
+pc_vcs_ready=$(printf "\033[33m")
+pc_vcs_dirty=$(printf "\033[31m")
+pc_vcs_merge=$(printf "\033[1;31m")
+pc_host=$(printf "\033[35m")
+pc_pwd=$(printf "\033[34m")
+pc_prompt=$(printf "\033[1;31m")
+
+# VCS:
+vcs_state=''
+vcs_branch=''
+gstat() { git status --porcelain 2>/dev/null; }
+ghead() { git status --porcelain -b 2>/dev/null | head -n 1; }
+vcs_update()
+{
+	# Update information if not in kernel repo:
+	if [ "$(pwd -P | cut -d '/' -f 1-5)" = "$HOME/dev/linux" ]; then
+		vcs_branch='linux'
+		vcs_state='kernel'
+	else
+		vcs_state=''
+		vcs_branch="$(ghead | cut -d '.' -f 1 | cut -d ' ' -f 2)"
+		if [ -n "$vcs_branch" ]; then
+			vcs_state='clean'
+			ghead | grep -o 'ahead' >/dev/null && vcs_state='ahead'
+			gstat | grep  '^[MADR].' >/dev/null && vcs_state='ready'
+			gstat | grep  '^.[M?D]' >/dev/null && vcs_state='dirty'
+			gstat | grep  'UU' >/dev/null && vcs_state='merge'
+		fi
+	fi
+}
+
+# }}}
+# ------------------------------------------------------------------------------
 
 unset -f cmd_exists
