--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,8 @@
 # Configuration file for tmux.
 # Written by ayekat on a tiring evening in march 2013.
 
-
 # ------------------------------------------------------------------------------
-# LOOK
+# LOOK {{{
 
 # Enable 256 colours:
 set -g default-terminal "screen-256color"
@@ -24,9 +23,9 @@ set-window-option -g window-status-current-format '#[bright,fg=colour148,bg=colo
 set -g pane-border-fg colour238
 set -g pane-active-border-fg colour148
 
-
+# }}}
 # ------------------------------------------------------------------------------
-# FEEL
+# FEEL {{{
 
 # More natural tab selection:
 bind-key Space  select-window -n
@@ -45,3 +44,6 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # Remove Escape key delay:
 set -sg escape-time 0
+
+# }}}
+# ------------------------------------------------------------------------------
