Dockerfile syntax hl for vim, bell character handling
Also, do not autofold C functions. It may have seemed handy, but it's
rather cumbersome. If your code needs folding, you should really
rethink its structure.

Dockerfile syntax hl is added because the Ubuntu version of vim does not
seem to have it included.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,3 +47,8 @@ set -sg escape-time 0
 
 # }}}
 # ------------------------------------------------------------------------------
+# BEHAVIOUR {{{
+
+# Listen for activity on all windows:
+set -g bell-action any
+# }}}
