--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,6 +41,7 @@ bind-key r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # Sane scrolling:
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+set -g mode-mouse on
 
 # Remove Escape key delay:
 set -sg escape-time 0
